Projet_GL/src/test/deca/syntax/invalid/unprovided/empty_include.deca
//Tests de include sans fichier

#include 
